--- a/Advanced_CSS/hydra.html
+++ b/Advanced_CSS/hydra.html
@@ -10,7 +10,7 @@
     <body>
         <div id="main">
             <header>
-                <img id="banner" src="Images/HydraLogo.jpg" alt="Hyrda Symbol">
+                <img id="banner" src="images/HydraLogo.jpg" alt="Hyrda Symbol">
             </header>
 
             <nav>
@@ -31,7 +31,7 @@
 
                 <h2 class="heading_style">Hyrdra's influence on SHIELD</h2>
                 <p>Hydra's infiltration of S.H.I.E.L.D. shakes the very core of the organization, forcing Coulson and his team to confront an enemy from within. As Hydra agents worm their way into S.H.I.E.L.D.'s ranks, trust becomes a rare commodity, and the line between ally and adversary blurs. The revelation that some of the team members have been compromised leads to tension, doubt, and betrayal, making every mission a high-risk endeavor. Hydra's manipulation reaches its peak with the shocking discovery of key operatives working undercover within S.H.I.E.L.D. The team must now question their loyalties, unsure of who they can truly trust, all while facing Hydra's growing influence. This internal threat, combined with external challenges, pushes S.H.I.E.L.D. to its breaking point, testing their resolve and unity like never before.</p>
-                <img src="Images/Hyrda.jpg" alt="Hyrda">
+                <img src="images/Hyrda.jpg" alt="Hyrda">
                 <hr>
 
                 <h3 class="heading_style">Hydra's Methods and Goals:</h3>
