--- a/Advanced_CSS/shield.html
+++ b/Advanced_CSS/shield.html
@@ -10,7 +10,7 @@
     <body>
         <div id="container">
             <header>
-                 <img id="banner" src="Images/Promo.jpg" alt="Agents of Shield Promo Picture">
+                 <img id="banner" src="images/Promo.jpg" alt="Agents of Shield Promo Picture">
             </header>
 
             <nav>
@@ -32,7 +32,7 @@
                 <h2 class="heading_style">The Bus Team</h2>
                 <p>Marvel Agents of Shield's focuses on Phil Coulson's hand-picked team facing all sorts of obstacles. This hand-picked group includes all the stereotypes for a secret agent team from genius scientists, skillful field agents, to a hacker asset. Phil Coulson, trained by Director Fury, is the leader of this team, ultimately making all the tough calls on missions. He was previously seen in multiple MCU movies, including The Avengers (2012) where his character is shown dying, though throughout this show they uncover the secrets of his death and how they were able to bring him back to life. Then there is Melinda May, famously known as the Cavalry, who is Coulson's right hand woman. She originally joined the team as just a pilot, but stepped out of her comfort zone to be in the field again. Next, we have Grant Ward, a very serious field agent, who doesn't want to be on the plane as he typically works alone. Then we have the iconic duo, Jemma Simmons and Leopold Fitz, the scientists on the team. Simmons is the biochemist, who is one of the youngest members of SHIELD's research division. Fitz is the engineer of the team, as well as one of the youngest members of SHIELD's Sci-Tech division. And finally we have Skye, who will later be known as Daisy Johnson, who is the hacker that gets recruited to the team as a consultant, before she soon becomes an official agent after showing her loyalty. Though as the seasons go on new characters are introduced and old characters leave.</p>
 
-                <img src="Images/AOScharacters.jpg" alt="The Bus Team">
+                <img src="images/AOScharacters.jpg" alt="The Bus Team">
 
 
                 <hr>
