--- a/Responsive_Web/page.html
+++ b/Responsive_Web/page.html
@@ -32,7 +32,7 @@
                 <h2 class="heading_style">Future Additions</h2>
                 <p>As the seasons go on old characters leave and new characters join the team. The most notable characters are, Agent Antione 'Trip' Triplett, Bobbi Morse, Lance Hunter, Elena 'Yoyo' Rodriguez, Alphonso 'Mack' Mackenzie, and Deke Shaw. Antione Triplett, a lacavy agent and grandsonn to the Howling Commando, joined SHIELD as a specialist with medical training. Bobbi Morse was scouted by Melinda May when she went to the SHIELD Academy of Operations and quickly moved up the ranks of SHIELD as a field agent. Lance Hunter, Morse's ex-husband, is a former British soldier turned mercenary that SHIELD hired after the fall of SHIELD. Elena Rodriguez is a Colombian Inhuman who went through Terrigenesis during the Inhuman Outbreak, gaining th eability to move at super-speed with the condition that she always returned to her starting point. Alphonso Mackenzie is a mechanical engineer and was a former member of SHIELD's engineering division before he eventually takes the role of director in later seasons. And the last addition to the team is Deke Shaw a former scavenger who lived in the Lighthouse in the year 2091 and assisted the team in overthrowing the Kree in his timeline and return them to theirs.</p>
 
-                <img src="images/AOScharacters.jpg" alt="The Bus Team">
+                <img src="images/AOSCHARACTERS.jpg" alt="The Bus Team">
 
 
                 <hr>
