--- a/Responsive_Web/page3.html
+++ b/Responsive_Web/page3.html
@@ -10,7 +10,7 @@
     <body>
         <div id="container">
             <header>
-                 <img id="banner" src="images/lola.jpg" alt="Team">
+                 <img id="banner1" src="images/lola.jpg" alt="Team">
             </header>
 
             <nav>
